Fix alignment of content and navigation bar content and improve naming

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,7 +103,7 @@ summary { cursor: pointer; }
 		padding-right: 7px;
 	}
 	#linkbar ul li i { display: none; }
-	#side-content, #licence {
+	#side-content, #copyright {
 		visibility: hidden;
 		display: none;
 	}
